# brief-ci-cd

./: .pre-commit-config.yaml  .secrets.baseline  BRIEF_CI_CD_V2.md  CHANGELOG.md  Infos.txt  PROBLEMES_DETECTES.md  docker-compose.yml  pyproject.toml
.github/workflows/: build.yml  ci.yml  release.yml
app/: database.py  main.py
app/models/: item.py
app/routes/: items.py
app/schemas/: item.py
app/services/: item_service.py
